# HyperFlowCutter

./: CMakeLists.txt  OwnPaToH.cpp  README.md  RefineAndBalanceHyperFlowCutter.cpp  definitions.h  staggered_hyperflowcutter.cpp
algorithm/: connectivity_check.h  finish_balance_partitioning.h  grow_assimilated.h  grow_reachable.h  hla_dinic.h  hla_flowcutter.h  hla_vertex_disjoint_edmonds_karp.h  hypergraph_search_algorithms.h  multicutter.h  multicutter_disconnected.h  piercing_heuristics.h  saturate.h  terminals.h
algorithm/hla_piercing_heuristics/: hla_basic_piercing_filters.h  hla_basic_scorers.h  patoh_ensemble_partitioning.h
datastructure/: bitvector.h  hypergraph.h  id_queue.hpp  mixed_assimilation_timestamp_set.h  pareto.h  partition.h  piercing_queue.h  queue.h  sparse_reset_vector.h  stack.h
io/: hlafc_output.h  hmetisreader.cpp  hmetisreader.h  patohreader.h  process_cmd_rebahfc.h  process_cmd_staggered_hyperflowcutter.h  processcommandlineoptions.h
util/: induced_sub_hypergraph.h  logging_information.cpp  random.cpp  timer.h  union_hypergraphs.h
